--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/base.css">
     <link rel="stylesheet" href="/styles.css">
 </head>
-<body>
-    <header>
+<body class="work_on_smartphone">
+    <header class="nav-bar">
     <nav>
     <ul>
         <li><a href="/index.html">Home</a></li>
@@ -16,7 +16,7 @@
     </ul>
     </nav>
     </header>
-    <main>
+    <main class="team">
         <article>
     <h1>Welcome to my site</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quas ab totam ipsum ratione, sed quasi sapiente dolorem recusandae blanditiis aut ipsam aliquam ipsa eveniet non. Possimus numquam reiciendis ipsum.</p>
